Add support for cosmos, and dev/prod profiles